css: fix cover images overflowing parent
OK I hope this doesn't break anything.

--- a/src/static/site4.css
+++ b/src/static/site4.css
@@ -756,6 +756,11 @@ li > ul {
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.75);
 }
 
+.image-inner-area {
+  width: 100%;
+  height: 100%;
+}
+
 img {
   object-fit: cover;
 }
